objects/Interview_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interview Answers</relationshipLabel>
        <relationshipName>Interview_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Interview_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview Question</label>
        <referenceTo>Interview_Question__c</referenceTo>
        <relationshipLabel>Interview Answers</relationshipLabel>
        <relationshipName>Interview_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interview Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Interview Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>